# perfect_cupcake_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
bot/: __init__.py  config.py  database.py
bot/routes/: admin.py  user.py
tests/: conftest.py  test_database.py  test_routes.py
