[tool.poetry]
name = "telegram-recipe-bot"
version = "0.1.0"
description = "Telegram bot for sharing recipes"
authors = ["Pavel Panchenko <pavel_panchenko@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.0"
aiosqlite = "^0.19.0"
greenlet = "^3.1.1"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=bot --cov-report=term-missing"